--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.25.x"
+          cache: true
+          cache-dependency-path: back/go.sum
       - name: Run fmt check
         run: |
           go fmt ./...
